# PyLisC

./: README.md  pyproject.toml
src/pylisc/: blur.py  cli.py  destripe.py  estimate_angle.py  lisc.py  main.py  mask.py
