[project]
name = "pylisc"
version = "0.0.0"
description = "Python implementation of LisC algorithm"
readme = "README.md"
authors = [
    { name = "Sam Holland", email = "hol_sam@icloud.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "mrcfile>=1.5.4",
    "numpy>=2.5.1",
    "scipy>=1.18.0",
    "tifffile>=2026.7.14",
    "typer>=0.27.0",
]

[project.scripts]
pylisc = "pylisc.main:pylisc"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
